@@ -18,17 +18,17 @@
  */
 package org.apache.iceberg.formats;
 
-import java.io.Closeable;
 import java.io.IOException;
 import java.util.Collection;
-import java.util.Iterator;
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 import org.apache.iceberg.FileFormat;
 import org.apache.iceberg.Schema;
 import org.apache.iceberg.encryption.EncryptedOutputFile;
@@ -38,7 +38,6 @@ import org.apache.iceberg.io.CloseableIterator;
 import org.apache.iceberg.io.InputFile;
 import org.apache.iceberg.io.SkippingCloseableIterator;
 import org.apache.iceberg.relocated.com.google.common.collect.Lists;
-import org.apache.iceberg.relocated.com.google.common.collect.Queues;
 
 /**
  * Interface that provides a unified abstraction for converting between data file formats and
@@ -128,25 +127,31 @@ public interface FormatModel<D, S> {
                     return SkippingCloseableIterator.wrap(iterator);
                   }
                 })
-            .collect(Collectors.toList());
+            .toList();
+    CloseableIterator<E> combined =
+        multiThreaded
+            ? new MultiThreadedCombiningReadIterator<>(iterators, combiner)
+            : new SingleThreadedCombiningReadIterator<>(iterators, combiner);
     return CloseableIterable.combine(
-        () ->
-            multiThreaded
-                ? new MultiThreadedCombiningReadIterator<>(iterators, combiner)
-                : new SingleThreadedCombiningReadIterator<>(iterators, combiner),
+        () -> combined,
         () -> {
+          combined.close();
           for (CloseableIterable<E> inner : iterable) {
             inner.close();
           }
         });
   }
 
-  class SingleThreadedCombiningReadIterator<E> implements Iterator<E>, Closeable {
+  class SingleThreadedCombiningReadIterator<E> implements CloseableIterator<E> {
     private final List<SkippingCloseableIterator<E>> iterators;
     private final Combiner<E> combiner;
     private final List<E> nextElements;
     private boolean closed = false;
+    private boolean exhausted = false;
     private long position = 0L;
+
+    /** Pre-fetched combined result, computed eagerly in {@link #tryAdvance()}. */
+    private E pendingResult = null;
 
     private SingleThreadedCombiningReadIterator(
         List<SkippingCloseableIterator<E>> iterators, Combiner<E> combiner) {
@@ -158,25 +163,18 @@ public interface FormatModel<D, S> {
       }
     }
 
-    @Override
-    public boolean hasNext() {
-      if (closed) {
+    /**
+     * Attempts to compute the next aligned, combined result from all iterators. Returns {@code
+     * true} if a result was produced and stored in {@link #pendingResult}, {@code false} if any
+     * iterator has been exhausted.
+     */
+    private boolean tryAdvance() {
+      if (pendingResult != null) {
+        return true;
+      }
+
+      if (exhausted) {
         return false;
-      }
-
-      for (Iterator<E> iterator : iterators) {
-        if (!iterator.hasNext()) {
-          return false;
-        }
-      }
-
-      return true;
-    }
-
-    @Override
-    public E next() {
-      if (!hasNext()) {
-        throw new NoSuchElementException();
       }
 
       int savedIndex = -1;
@@ -198,7 +196,8 @@ public interface FormatModel<D, S> {
           }
 
           if (!iterator.hasNext()) {
-            throw new NoSuchElementException();
+            exhausted = true;
+            return false;
           }
 
           E value = iterator.next();
@@ -222,33 +221,9 @@ public interface FormatModel<D, S> {
         }
 
         position++;
-        return combiner.combine(nextElements);
+        pendingResult = combiner.combine(nextElements);
+        return true;
       }
-    }
-
-    @Override
-    public void close() throws IOException {
-      closed = true;
-    }
-  }
-
-  class MultiThreadedCombiningReadIterator<E> implements Iterator<E>, Closeable {
-    private final List<Iterator<E>> iterators;
-    private final Combiner<E> combiner;
-    private final ExecutorService executorService;
-    private final List<BlockingQueue<E>> queues;
-    private boolean closed = false;
-    private boolean fetching = false;
-
-    private MultiThreadedCombiningReadIterator(
-        Collection<SkippingCloseableIterator<E>> iterators, Combiner<E> combiner) {
-      this.iterators = Lists.newArrayList(iterators);
-      this.combiner = combiner;
-      this.executorService = Executors.newFixedThreadPool(iterators.size());
-      this.queues =
-          iterators.stream()
-              .map(i -> Queues.<E>newLinkedBlockingDeque(100))
-              .collect(Collectors.toList());
     }
 
     @Override
@@ -257,42 +232,7 @@ public interface FormatModel<D, S> {
         return false;
       }
 
-      if (!fetching) {
-        fetching = true;
-
-        // Start fetching elements from each iterator in parallel
-        for (int i = 0; i < iterators.size(); i++) {
-          final Iterator<E> iterator = iterators.get(i);
-          final BlockingQueue<E> queue = queues.get(i);
-          executorService.execute(
-              () -> {
-                try {
-                  while (iterator.hasNext()) {
-                    synchronized (iterator) {
-                      queue.put(iterator.next());
-                    }
-                  }
-                } catch (Exception e) {
-                  throw new RuntimeIOException("Alma %s", e.getMessage());
-                }
-              });
-        }
-      }
-
-      // If any iterator doesn't have next, return false
-      for (int i = 0; i < iterators.size(); i++) {
-        final Iterator<E> iterator = iterators.get(i);
-        final BlockingQueue<E> queue = queues.get(i);
-        if (!iterator.hasNext() && queue.isEmpty()) {
-          synchronized (iterator) {
-            if (!iterator.hasNext() && queue.isEmpty()) {
-              return false;
-            }
-          }
-        }
-      }
-
-      return true;
+      return tryAdvance();
     }
 
     @Override
@@ -301,24 +241,245 @@ public interface FormatModel<D, S> {
         throw new NoSuchElementException();
       }
 
-      return combiner.combine(
-          queues.stream()
-              .map(
-                  q -> {
-                    try {
-                      return q.take();
-                    } catch (InterruptedException e) {
-                      Thread.currentThread().interrupt();
-                      throw new RuntimeIOException("Alma %s", e.getMessage());
-                    }
-                  })
-              .collect(Collectors.toList()));
+      E result = pendingResult;
+      pendingResult = null;
+      return result;
     }
 
     @Override
     public void close() throws IOException {
       closed = true;
-      executorService.shutdown();
+    }
+  }
+
+  /**
+   * An immutable pair of a value and the position of the iterator at the time it was produced.
+   * Position represents the iterator's position <em>after</em> calling {@code next()}, so element
+   * at position {@code p} was the {@code p}-th element returned (1-based).
+   *
+   * <p>A sentinel instance with position {@code -1} signals that the producer has finished.
+   */
+  record PositionedElement<E>(long position, E value) {
+    private static final long SENTINEL_POSITION = -1L;
+    private static final PositionedElement<?> SENTINEL =
+        new PositionedElement<>(SENTINEL_POSITION, null);
+
+    @SuppressWarnings("unchecked")
+    static <E> PositionedElement<E> sentinel() {
+      return (PositionedElement<E>) SENTINEL;
+    }
+
+    boolean isSentinel() {
+      return position == SENTINEL_POSITION;
+    }
+  }
+
+  class MultiThreadedCombiningReadIterator<E> implements CloseableIterator<E> {
+    private static final int BUFFER_CAPACITY = 128;
+
+    private final List<SkippingCloseableIterator<E>> iterators;
+    private final Combiner<E> combiner;
+    private final ExecutorService executorService;
+    private final List<BlockingQueue<PositionedElement<E>>> buffers;
+    private final List<E> elements;
+
+    /** Shared target position: producers skip elements below this position. */
+    private final AtomicLong targetPosition = new AtomicLong(0);
+
+    /** Captures the first exception thrown by any producer thread. */
+    private final AtomicReference<Throwable> producerError = new AtomicReference<>(null);
+
+    private volatile boolean closed = false;
+    private boolean fetching = false;
+
+    /** Pre-fetched combined result, computed eagerly in {@link #tryAdvance()}. */
+    private E pendingResult = null;
+
+    /** Set once any producer's sentinel has been consumed; no more results will be produced. */
+    private boolean exhausted = false;
+
+    private MultiThreadedCombiningReadIterator(
+        Collection<SkippingCloseableIterator<E>> iterators, Combiner<E> combiner) {
+      this.iterators = Lists.newArrayList(iterators);
+      this.combiner = combiner;
+      this.executorService = Executors.newFixedThreadPool(iterators.size());
+      this.buffers = Lists.newArrayListWithExpectedSize(this.iterators.size());
+      this.elements = Lists.newArrayListWithExpectedSize(this.iterators.size());
+
+      for (int i = 0; i < this.iterators.size(); ++i) {
+        elements.add(null);
+      }
+
+      for (int idx = 0; idx < this.iterators.size(); idx++) {
+        this.buffers.add(new ArrayBlockingQueue<>(BUFFER_CAPACITY));
+      }
+    }
+
+    private void startFetching() {
+      fetching = true;
+
+      for (int i = 0; i < iterators.size(); i++) {
+        final SkippingCloseableIterator<E> iterator = iterators.get(i);
+        final BlockingQueue<PositionedElement<E>> buffer = buffers.get(i);
+        executorService.execute(
+            () -> {
+              try {
+                while (!closed && iterator.hasNext()) {
+                  long currentTarget = targetPosition.get();
+
+                  // Skip ahead if the iterator is behind the shared target position
+                  if (iterator.position() < currentTarget) {
+                    iterator.skipTo(currentTarget);
+                  }
+
+                  if (!iterator.hasNext()) {
+                    break;
+                  }
+
+                  E value = iterator.next();
+                  long pos = iterator.position();
+
+                  // Only enqueue if this element is still at or ahead of the target
+                  if (pos > targetPosition.get()) {
+                    buffer.put(new PositionedElement<>(pos, value));
+                  }
+                  // Otherwise discard and loop — the target moved while we were reading
+                }
+
+                // Signal completion with a sentinel
+                buffer.put(PositionedElement.sentinel());
+              } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+                producerError.compareAndSet(null, e);
+              } catch (Exception e) {
+                producerError.compareAndSet(null, e);
+              }
+            });
+      }
+    }
+
+    private void checkProducerError() {
+      Throwable error = producerError.get();
+      if (error != null) {
+        throw new RuntimeIOException("Error in producer thread: %s", error.getMessage());
+      }
+    }
+
+    /**
+     * Takes the next aligned element from the given blocking queue, consuming and discarding any
+     * elements whose position is below the current target position. Returns {@code null} if the
+     * producer has finished (sentinel encountered).
+     */
+    private PositionedElement<E> takeAligned(BlockingQueue<PositionedElement<E>> buffer)
+        throws InterruptedException {
+      while (true) {
+        PositionedElement<E> element = buffer.take();
+        if (element.isSentinel()) {
+          return null;
+        }
+
+        if (element.position() > targetPosition.get()) {
+          return element;
+        }
+
+        // Discard stale element and try the next one
+      }
+    }
+
+    /**
+     * Attempts to compute the next aligned, combined result from all buffers. Returns {@code true}
+     * if a result was produced and stored in {@link #pendingResult}, {@code false} if any producer
+     * has finished (sentinel).
+     */
+    private boolean tryAdvance() {
+      if (pendingResult != null) {
+        return true;
+      }
+
+      if (exhausted) {
+        return false;
+      }
+
+      checkProducerError();
+
+      if (!fetching) {
+        startFetching();
+      }
+
+      try {
+        int savedIndex = -1;
+        while (true) {
+          long currentTarget = targetPosition.get();
+          boolean needsRealign = false;
+
+          for (int i = 0; i < buffers.size(); i++) {
+            // If this buffer already provided its value at the current target, reuse it
+            if (i == savedIndex) {
+              savedIndex = -1;
+              continue;
+            }
+
+            PositionedElement<E> pe = takeAligned(buffers.get(i));
+            if (pe == null) {
+              // Producer finished — no more combined results
+              exhausted = true;
+              return false;
+            }
+
+            elements.set(i, pe.value());
+            long pePosition = pe.position();
+
+            if (pePosition > currentTarget + 1) {
+              // This buffer skipped ahead — keep its value and update the shared target
+              // position so producers and subsequent takeAligned calls discard stale elements
+              targetPosition.set(pePosition - 1);
+              savedIndex = i;
+              needsRealign = true;
+              break;
+            }
+          }
+
+          if (needsRealign) {
+            // Re-fetch elements for buffers before the one that jumped.
+            // The saved buffer's element is already correct at the new position.
+            continue;
+          }
+
+          // All elements are aligned — advance the target position and combine
+          targetPosition.incrementAndGet();
+          pendingResult = combiner.combine(elements);
+          return true;
+        }
+      } catch (InterruptedException e) {
+        Thread.currentThread().interrupt();
+        throw new RuntimeIOException("Interrupted while reading: %s", e.getMessage());
+      }
+    }
+
+    @Override
+    public boolean hasNext() {
+      if (closed) {
+        return false;
+      }
+
+      return tryAdvance();
+    }
+
+    @Override
+    public E next() {
+      if (!hasNext()) {
+        throw new NoSuchElementException();
+      }
+
+      E result = pendingResult;
+      pendingResult = null;
+      return result;
+    }
+
+    @Override
+    public void close() throws IOException {
+      closed = true;
+      executorService.shutdownNow();
     }
   }
 }
